--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cos-nodejs-sdk-v5": "^2.9.13",
     "dotenv": "^8.2.0",
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
